Fixed a few more things
got rid of the whitespace on the side.

--- a/css/waves.css
+++ b/css/waves.css
@@ -1,4 +1,15 @@
 /*--------------WAVES MAIN CSS-----------------*/
+html,body{ 
+    
+    width: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
+    
+}
+
+
+
 *{ font-family: 'heebo', sans-serif !important;
 
 
@@ -16,8 +27,13 @@ h3{
 }
  
 
+
+
 /*--------------SITE BODY----------------------*/
 .bodyWrap{
+   
+    z-index: -1000;
+    
  
   background: linear-gradient(238deg, #fd8800, #fd008f, #9700fd, #003dfd, #05c7e6, #4bd58d);
   background-size: 1200% 1200%;
@@ -36,14 +52,7 @@ h3{
 }
     
     
-    -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
-    box-shadow: inset 0 0 100px rgba(0,0,0,.5);  
-    z-index: -1000000;
-
-    width: 100%;
-    height: 100%;
-    
-    overflow:disabled;
+ 
 }
 
 .menuButton{
@@ -119,13 +128,17 @@ h3{
     max-width:100%;
     margin-top:27%;
     z-index: 100;
+    
+
+       text-align: center;
+    
 }
 
 
 .blogContent{
    background-color: white;
    
-    text-align: left;
+    text-align: center;
     
     padding-top:20;
     padding-left:10;
@@ -140,14 +153,27 @@ h3{
     justify-content: space-around;
     flex-flow: column;
     
-    box-shadow: 1px 1px 50px #000000;
+    box-shadow: 0px 0px 50px #000;
    
     
 }
 
+.recordingWrap{
+    
+    margin-top:50;
+    
+}
+
 .wavesFace{
-    max-width: 100%;
-    margin-top: 40;
+    max-width: 60%;
+
+    padding-right: 25px; 
+    padding-bottom: 25px; 
+    float: left;
+    
+     border-radius: 50%;
+  -webkit-shape-outside:circle();
+  shape-outside:circle();
 
 }
 
@@ -243,7 +269,8 @@ margin-top:-3% ;
    overflow: hidden;
     
     display: flex;
-    flex-direction:row;
+    justify-content: center
+ 
 }
 
 .footerTag{
@@ -259,8 +286,9 @@ margin-top:-3% ;
 
 .footerLogo{
     margin-top:30;
-max-width: 40%;
+max-width: 30%;
     margin-bottom: 30;
+
    
 
 }
